<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textPuntuacion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/puntuacion" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textPuntos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center" >


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/q2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageB1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/reliquias3" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageB2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/reliquias2" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageB3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/reliquias1" />

            <Space
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageB4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/reliquias4" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="bottom|center">

        <Button
            android:id="@+id/botonConfirmar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/confirmar" />

    </LinearLayout>


</LinearLayout>